label removed, typeahead content added

--- a/src/app/OrderZapp/oz/views/oz.helpContents.tpl.html
+++ b/src/app/OrderZapp/oz/views/oz.helpContents.tpl.html
@@ -33,7 +33,7 @@
            <div>
                 <div >
                   <!--   <div><div style = 'width : 48%' > <h4 > Question Heading : </h4></div><div  style = 'width : 48%'><h4 ng-bind = 'content.heading'></h4></div></div> -->
-                  <h4>Question Heading : <span ng-bind = 'content.heading'></span></h4>
+                  <h4><span ng-bind = 'content.heading'></span></h4>
                 </div>
 
             
