--- a/src/app/OrderZapp/oz/views/oz.order.view.tpl.html
+++ b/src/app/OrderZapp/oz/views/oz.order.view.tpl.html
@@ -2,7 +2,7 @@
 <input type= ' text' ng-model = 'search' class = 'form-control'><div class = "mainOrderContainer" ng-repeat = "list in orders | filter : search" >
     
 		<div class = "highlighrOrderContainer">
-	         <div class = "subOrderContainer" style = 'min-height : 180px'>
+<!-- 	         <div class = "subOrderContainer" style = 'min-height : 180px;'>
         				  <div style = "width:100%;float:left;">  <h4 ><b>Sub-order No : </b> <span ng-bind = "list.suborder.suborderid"></span></h4></div>
         				 
                   <div style = 'width : 50%; float : left;'> <h4 ><b>Customer Contact No. : </b> <span ng-bind = "list.consumer.mobileno"></span></h4></div>
@@ -15,6 +15,39 @@
                     <div style = 'width:50%;float:left'><h4 ><b>Buyer Expected Time Slot : </b><span ng-if = 'list.suborder.prefdeltimeslot !== undefined'><span ng-bind = "list.suborder.prefdeltimeslot.from"></span> To <span ng-bind = "list.suborder.prefdeltimeslot.to"></span></span></h4>  </div> 
 
                    <div style = 'width:50%;float:left'><h4 ><b>Seller Time Slot : </b><span ng-if = 'list.suborder.deliverytimeslot !== undefined'><span ng-bind = "list.suborder.deliverytimeslot.from"></span> To <span ng-bind = "list.suborder.deliverytimeslot.to"></span></span> </h4>  </div>
+           </div> -->
+
+           <div class = 'subOrderContainer row' style = 'min-height : 180px;'>
+              <div class = 'row col-md-12 col-xs-12'>
+                <h4 ><b>Sub-order No : </b> <span ng-bind = "list.suborder.suborderid"></span></h4>
+              </div>
+              <div  class="col-md-6 col-xs-6">
+                <div class = 'row'>
+                  <h4 ><b>Customer Contact No. : </b> <span ng-bind = "list.consumer.mobileno"></span></h4>
+                </div>
+
+                <div class = 'row'>
+                  <h4 ><b>Buyer Delivery Date : </b><span ng-bind = "convertMomentFormat(list.suborder.prefdeldtime)"></span> </h4>  
+                </div>
+
+                <div class = 'row'>
+                  <h4 ><b>Buyer Expected Time Slot : </b><span ng-if = 'list.suborder.prefdeltimeslot !== undefined'><span ng-bind = "list.suborder.prefdeltimeslot.from"></span> To <span ng-bind = "list.suborder.prefdeltimeslot.to"></span></span></h4>
+                </div>
+
+              </div>
+               <div  class="col-md-6 col-xs-6">
+                <div class = 'row'>
+                  <h4><b> Seller Contact No: </b><span ng-bind = 'list.suborder.productprovider.contact_supports'></span>  </h4>
+                </div>
+
+                <div class = 'row'>
+                  <h4 ><b>Seller Delivery Date : </b><span ng-bind = "convertMomentFormat(list.suborder.deliverydate) "></span> </h4> 
+                </div>
+
+                <div class = 'row'>
+                  <h4 ><b>Seller Time Slot : </b><span ng-if = 'list.suborder.deliverytimeslot !== undefined'><span ng-bind = "list.suborder.deliverytimeslot.from"></span> To <span ng-bind = "list.suborder.deliverytimeslot.to"></span></span> </h4> 
+                </div>
+              </div>
            </div>
 
               <div class = "fontsize"><u><b>Status : </b><span ng-bind = "list.suborder.status"></span></u></div>
