Feature : Manage Price css

--- a/src/app/ProviderWall/ManagePrices/views/oz.providerContent.managePrice.tpl.html
+++ b/src/app/ProviderWall/ManagePrices/views/oz.providerContent.managePrice.tpl.html
@@ -171,7 +171,7 @@
               <button ng-hide="list.holding_price" class = 'pull-right  btn  btn-default' ng-click = 'edit(list)' ><i class="fa fa-plus"></i>  &nbsp; Holding Price</button>
            </td>
          
-            <td ng-show = 'list.editing' class="pull-right" colspan="2">
+            <td ng-show = 'list.editing' colspan="2">
 
               <a  ng-click = 'addHoldingPrice(list)' class="btn btn-primary "   ><i class="fa fa-floppy-o"></i>  &nbsp; Save</a>
 
