added server load spinner to user calls, seller, branch, delivery charges and pichup address calls

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -94,7 +94,8 @@
 		</div>
 
 		<div oz-alert-message></div> <br/>
-		<div id="oz-main-view" class="" style="margin-top: 15px;">        
+		<div id="oz-main-view" class="" style="margin-top: 15px;"> 
+      <div prodo-spinner></div>       
       <div ui-view></div>
     </div>
 
