--- a/src/app/index.html
+++ b/src/app/index.html
@@ -95,7 +95,7 @@
 
 		<div oz-alert-message></div> <br/>
 		<div id="oz-main-view" class="" style="margin-top: 15px;"> 
-      <div prodo-spinner></div>       
+      <div oz-spinner></div>       
       <div ui-view></div>
     </div>
 
