--- a/src/app/ProviderWall/ManageOrders/views/oz.providerContent.orderbyBranch.tpl.html
+++ b/src/app/ProviderWall/ManageOrders/views/oz.providerContent.orderbyBranch.tpl.html
@@ -49,17 +49,19 @@
               <h4 class="modal-title" id="myModalLabel"> Select Delivery Time Slot</h4>
             </div>
             <div class="modal-body">
+            
+          
 
             <div ng-show="(orderPrefDate | date:'dd-MM-yyyy')  == ( todaysDate1 | date:'dd-MM-yyyy')  "> 
 
-            <div  ng-show="todaysDate1.getHours() < order.prefdeltimeslot.to" class="row" style="padding:10px; padding-left:20px;" >
+            <div  ng-show="todaysDate1.getHours() < order.prefdeltimeslot.to" class="row" style="padding:10px; padding-left:25px;" >
              <span >
               <input type="radio" ng-model="deliveryOption" value="pref"  >
               <span > Customer Requested Delivery Date  - [{{order.preferred_delivery_date | date:'dd-MM-yyyy ' }}] , Time Slot - {{changeTimeSlotDisplayFormat( order.prefdeltimeslot.from ) }} To  {{ changeTimeSlotDisplayFormat(order.prefdeltimeslot.to) }}</span>
               </span>
             </div> 
 
-              <div  ng-hide="todaysDate1.getHours() < order.prefdeltimeslot.to" class="row" style="padding:10px; padding-left:20px;" tooltip="This option is disabled as today's date is more than customers preferred delivery date." tooltip-placement="top">
+              <div  ng-hide="todaysDate1.getHours() < order.prefdeltimeslot.to" class="row" style="padding:10px; padding-left:25px;" tooltip="This option is disabled as today's date is more than customers preferred delivery date." tooltip-placement="top">
               <span >
               <input type="radio" ng-model="deliveryOption" value="pref" disabled >
               <span style="color:gray"> Customer Requested Delivery  Date  - [{{order.preferred_delivery_date | date:'dd-MM-yyyy ' }}] , Time Slot - {{ changeTimeSlotDisplayFormat(order.prefdeltimeslot.from )}}  To  {{ changeTimeSlotDisplayFormat( order.prefdeltimeslot.to) }}</span>
@@ -71,67 +73,64 @@
 
             <div ng-hide=" (orderPrefDate | date:'dd-MM-yyyy')  == ( todaysDate1 | date:'dd-MM-yyyy') ">
             
-            <div ng-show="(orderPrefDate )  < ( todaysDate1 ) " class="row" style="padding:10px; padding-left:20px;" tooltip="This option is disabled as today's date is more than customers preferred delivery date." tooltip-placement="top">
+            <div ng-show="(orderPrefDate )  < ( todaysDate1 ) " class="row" style="padding:10px; padding-left:25px;" tooltip="This option is disabled as today's date is more than customers preferred delivery date." tooltip-placement="top">
              <span >  <input type="radio" ng-model="deliveryOption" value="pref" disabled >
               <span style="color:gray"> Customer Requested Delivery Date  - [{{order.preferred_delivery_date | date:'dd-MM-yyyy ' }}] , Time Slot - {{changeTimeSlotDisplayFormat( order.prefdeltimeslot.from) }} To {{changeTimeSlotDisplayFormat( order.prefdeltimeslot.to )}}</span>
               </span>
             </div> 
             
 
-            <div class="row" style="padding:10px; padding-left:20px;" ng-hide="((orderPrefDate ) <  (todaysDate1  ))  ">
+            <div class="row" style="padding:10px; padding-left:25px;" ng-hide="((orderPrefDate ) <  (todaysDate1  ))  ">
              <span >  <input type="radio" ng-model="deliveryOption" value="pref"  > Customer Requested Delivery Date  - [{{order.preferred_delivery_date | date:'dd-MM-yyyy ' }}] , Time Slot - {{changeTimeSlotDisplayFormat( order.prefdeltimeslot.from) }} To {{ changeTimeSlotDisplayFormat(order.prefdeltimeslot.to )}}
              </span>
             </div> 
 
            </div>
 
-             <div class="row" style="padding:10px; padding-left:20px;">
-             <span >
+             <div class="row" style="padding:10px; ">
+
+             
+
+             <span class="col-md-6">
                <input type="radio" ng-model="deliveryOption" value="custom" >  New Delivery Date 
              </span>
-             <span ng-show="deliveryOption=='custom'" >&nbsp; &nbsp; <a  href="" ng-init="showCal=0" ng-click="showCal=1"> [{{delivery_date.date | date:'dd-MM-yyyy'}} ]</a>
-               
-             </span>       
+                           
+              <div ng-show="deliveryOption=='custom'" class="col-md-6 " >
+                <p class="input-group">
+                 <input  ng-change="getDeliveryTimeSlots(order)" id="delivery_date"  type="text" placeholder="Select delivery date" ng-model="delivery_date.date" class=" form-control oz-datepickerTextWidth "  datepicker-popup="{{format}}"  is-open="opened" min="todaysDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" required close-text="Close" />
+                     <span class="input-group-btn">
+                       <button type="button" class="btn btn-default" ng-click="open($event)"><i class="fa fa-calendar"></i> </button>
+                     </span>
+                 </p>
+               </div>
                  
             </div> 
 
 
+      
 
-            <div ng-show="deliveryOption=='custom'" style="margin:10px; margin-left:30px;">
-             <div ng-show="showCal==1" class="row">
-                    <div class="col-md-6">
-                        <p class="input-group">
-                 <input   id="delivery_date"  type="text" placeholder="Select delivery date" ng-model="delivery_date.date" class=" form-control oz-datepickerTextWidth "  datepicker-popup="{{format}}"  is-open="opened" min="todaysDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" required close-text="Close" />
-                          <span class="input-group-btn">
-                            <button type="button" class="btn btn-default" ng-click="open($event)"><i class="fa fa-calendar"></i> </button>
-                          </span>
-                        </p>
-                    </div><br/>
-                </div>
-           
+          <div ng-show="deliveryOption=='custom'" style="margin:10px; margin-left:30px;">
+
             <span ng-show="delivery_date.date">
+            <i ng-show="NodeliveryTimeSlot">No Delivery Time Slots Available For {{delivery_date.date | date:'dd-MM-yyyy ' }}. Please Select Different Date</i>
             
-            <span>Select New Delivery Time Slot</span><br/>
-
-
-               <p ng-repeat="ds in deliveryTimeSlots" >
-             
-               <span ng-show="(delivery_date.date | date:'dd-MM-yyyy' )== (todaysDate1 |  date:'dd-MM-yyyy') "> 
-
-              
-                 <span ng-show=" ((delivery_date.date.getHours())+'.'+(delivery_date.date.getMinutes())) < changeTimeSlotDisplayFormatDot(ds.to) " >
-                  <input  type="radio" ng-model="delivery_date.newDeliverySlot" ng-value="ds" > &nbsp; &nbsp; {{changeTimeSlotDisplayFormat(ds.from)}}&nbsp; &nbsp; <span style="color:gray">|</span>  &nbsp; &nbsp; {{changeTimeSlotDisplayFormat(ds.to)}} 
-                  </span>
-               </span>
-
-                <span ng-hide="(delivery_date.date | date:'dd-MM-yyyy' )== (todaysDate1 |  date:'dd-MM-yyyy') ">
+            <span ng-show="deliveryTimeSlot && NodeliveryTimeSlot==false">Select New Delivery Time Slot</span>
+             <br/>
+               <p ng-repeat="ds in deliveryTimeSlot" >
+               <span ng-if="ds.available==true">
                   <input   type="radio" ng-model="delivery_date.newDeliverySlot" ng-value="ds" > &nbsp; &nbsp; {{changeTimeSlotDisplayFormat(ds.from)}}&nbsp; &nbsp;  <span style="color:gray">|</span>  &nbsp; &nbsp; {{changeTimeSlotDisplayFormat(ds.to)}} 
                </span>
+               </p>
+              
+                <span ng-show="deliveryTimeSlot  && NodeliveryTimeSlot==false" class="text-muted" style="font-size:12px;">** All delivery time slot options are calculated using your products lead time</span>
 
                 
-               </p>
+
              </span>
-                
+    
+             
+ 
+
             </div>
             <a type="button" class="btn btn-default margin-left450" ng-click="deliveryOption='';" data-dismiss="modal"> <i class="glyphicon glyphicon-remove"></i>  &nbsp; Cancel</a>
             <a class="btn btn-primary  "  ng-click="onDateSelected(delivery_date,deliveryOption,order)">Accept </a>
