--- a/src/app/ProviderWall/ManageOrders/views/oz.OrderContent.tpl.html
+++ b/src/app/ProviderWall/ManageOrders/views/oz.OrderContent.tpl.html
@@ -1,9 +1,11 @@
- <div class="list-group-item orderbox"> <!-- ngrepeat outer box css-->
-
+ <div class="list-group-item orderbox" > <!-- ngrepeat outer box css-->
+<div ng-attr-id="{{order.suborderid}}">
 <!-- order /////////////////////////////////// -->
 <div ng-class-odd="'oddRowOrderid'" ng-class-even="'evenRowOrderid'" class="headingOrderDiv" > 
  <span class="bold color-white" >Order No:  <span class="oz-contentsRight">{{order.suborderid}}</span> </span>
 
+<a href=""  ng-click="printOrder(order.suborderid)"><i class="fa fa-print pull-right" style="color:white; margin:5px;">  </i></a>
+ 
       <span ng-hide="order.status =='cancelled' || order.status =='rejected' " class=" label label-info  font14 pull-right "  ng-class="{ 
                      bgGreen1: (order.status =='orderreceived' ) ,
                      bgGreen: (order.status == 'accepted') ,
@@ -19,12 +21,14 @@
                      bgRed1: (order.status == 'rejected')
                     }"><a style="color:white;" href="" ng-init="showReason=false" ng-click="showReason = showReason === false ? true: false;">{{order.status}} <i class="fa fa-arrow-down"></i></a></span>
 
+
+
  </div>
  <!-- order /////////////////////////////////// -->
 
 
 <div class="headingDiv" style="background-color: rgb(255, 148, 148);" ng-show="showReason==true"> 
-  <span ng-bind="order.reasontocancelreject"></span>
+  <span ng-bind="order.reasontocancelreject"></span>  
 </div>
 
 <!-- Delivery////////////////////////////////// -->
@@ -55,13 +59,7 @@
         </span>
       </div>
      
-     <!--  <div  class="col-md-4">
-        <span class="bold" ng-show="order.deliverydate"> Delivery On </span> <span ng-show="order.deliverydate" class=" oz-contentsRight">{{order.deliverydate | date:'yyyy-MM-dd ' }}</span>
-      </div> -->
-    
      </div><!--  2nd line -->
-
-
 
      <div class="row margintop5"><!--  3rd line -->
         <div  class="col-md-4">
@@ -72,7 +70,7 @@
         </div> 
       
         <div  class="col-md-4" >  <span class="bold">Payment Status:  </span> <span  class="  oz-contentsRight">{{order.buyerpayment.status}}</span>
-</div>
+        </div>
  
 
       </div><!--  3rd line -->
@@ -105,7 +103,6 @@
            <span ng-show="order.pickup_address.country"> {{order.pickup_address.country}}, </span>
            <span ng-show="order.pickup_address.zipcode"> {{order.pickup_address.zipcode}}. </span>
         
-                <!--          {{order.pickup_address.address1}}  {{order.pickup_address.address2}}   {{order.pickup_address.area}}  {{order.pickup_address.city}}  {{order.pickup_address.state}}  {{order.pickup_address.country}}  {{order.pickup_address.zipcode}} --> 
          </span>
           </div>
 <!-- Delivery////////////////////////////////// -->
@@ -115,8 +112,6 @@
 <div class="headingDiv"> 
 <span class="bold">Items </span>
 </div>
-
-
 
           <div > <!-- product table -->
            <div class="productItemheader row margintop5 ">
@@ -143,22 +138,8 @@
 
         <div class="row margintop5 rowSideMargin" ng-repeat="product in order.products" ng-class-even="'OZ-evenRow'"> <!-- ng-repeat for product -->
              
-<!--                <div  class="col-md-1">
-                 <span ng-show="product.messageonproduct">
-                   <a href="" ng-click="productMassage=1">
-                    <span class="fa fa-cog fa-lg"> </span>
-                   </a>
-                  </span>
-                  
-                      <div class="OZ-cakeMessage" ng-show="productMassage==1"> {{product.messageonproduct}}  <i ng-click="productMassage=0 " class="pull-right prodo-cursor   glyphicon glyphicon-circle-arrow-up " ></i></div>
-              </div> -->
-
               <div  class="col-md-3">
-                
                  <span class=" " > 
-             
-                  
- 
                 
                        <span style="">
                        <a href="" ng-init="productMassage = false" ng-click="productMassage = productMassage === false ? true: false;" ng-show="product.productconfiguration">
@@ -169,7 +150,7 @@
                   {{product.productname}} 
                  
 
-                  <div class="OZ-cakeMessage" ng-show="productMassage==1">
+                  <div class="OZ-cakeMessage removenghide "  ng-show="productMassage==1">
                      
                       <table style="margin:2px ;background-color:rgb(246, 241, 246)" class="borderless table table-condensed ">
                         <tr>
@@ -196,22 +177,11 @@
                         </tr>
 
                       </table>
-
-
-
-                  
-                   <!-- <i ng-click="productMassage=0 " class="pull-right prodo-cursor   glyphicon glyphicon-circle-arrow-up " ></i> -->
                    </div>
-
-
-                
                  </span>
-<!--                     <span class="oz-productcode"> [ {{product.productcode}} ] </span> --> 
               </div>
                    <div  class="col-md-2">
                 
-                 <!-- <span class=" oz-contentsRight"> {{product.productname}} </span> -->
-                 <!-- oz-productcode = bolder class-->
                     <span class="">  {{product.productcode}} </span> 
               </div>
 
@@ -230,9 +200,7 @@
 
        </div> <!-- ng-repeat for product -->
 
-
             <hr class="myhr">
-
 
          <div ng-show="order.deliverytype=='home' && order.deliverycharge>0" class="row margintop5">
          <div  class="col-md-3"> </div>
@@ -252,7 +220,7 @@
                   <a href="" ng-init="instruction=false" ng-click="instruction = instruction === false ? true: false;">
                      Order Instructions  <i class="fa fa-hand-o-right"></i>
                   </a>
-                   <div class="OZ-cakeMessage" ng-show="instruction==1">{{order.orderinstructions}} </div>
+                   <div class="OZ-cakeMessage removenghide" ng-show="instruction==1">{{order.orderinstructions}} </div>
 
               </div>
               </div>
@@ -268,25 +236,18 @@
          </div>
        </div>
 
-
-
-          </div>  <!-- product table -->
-
-
+  </div>  <!-- product table -->
 
 
 <!-- Items ////////////////////////////////// -->
-
-
+</div>  <!--  for printing invoice upto this
+ -->
 <!-- Tracking tree////////////////////////////////// -->
 <div ng-hide=" order.status=='cancelled' || order.status=='rejected'">
 <div class="headingDiv" style="height:40px;"> 
 
 
 <a  style="color:black" href="" ng-init="showTrackingTree=false" ng-click="showTrackingTree = showTrackingTree === false ? true: false;"><i style="vertical-align: sub;" class="fa fa-arrow-down"></i> <span class="bold" style="vertical-align: text-top;"> Order Tracking </span></a>
-
-
-
 
 <!-- action bar -->
      <div class="pull-right" ng-hide="order.status=='ordercomplete' || order.status=='cancelled' || order.status=='rejected'" style="margin-top: -5px">
@@ -318,10 +279,7 @@
 
 </div>
 
-
 <div ng-show="showTrackingTree==true"> <!-- order tracking tree -->
-
-
 
              <div id="tabs">
           <ul id="tabTracking" class=" oz-trackingUL nav nav-pills" ng-init="firstTreeTabOpen(order.status);" >
