--- a/src/app/ProviderWall/ManageDeliveryCharges/views/oz.deliverycharges.managearea.tpl.html
+++ b/src/app/ProviderWall/ManageDeliveryCharges/views/oz.deliverycharges.managearea.tpl.html
@@ -2,12 +2,12 @@
 	<div style="margin:0px;" class="row">
 		<div class="col-md-12">
 			<p style="font-size:12px; font-weight:bold; letter-spacing:1px;" class="text-muted">
-			* Selecting zipcode will let you view details about delivery availability at a particular branch and you can manage your available delivery areas and its charges from here.
+			* Selecting zipcode or area will let you view details about delivery availability under that area or all areas under selected zipcode of your branch and you can manage your available delivery areas and its charges from here.
 			</p>
 		</div>
 	</div>
 	<div style="margin:0px;" class="row">
-		<div class="col-md-3">
+		<div class="col-md-2">
 
 			<div id="oz-signup-input-group" class="input-group">
 				<p class="text-muted">Please Select Country</p>
@@ -16,7 +16,7 @@
 
 		</div>		
 
-		<div class="col-md-3">
+		<div class="col-md-2">
 
 			<div id="oz-signup-input-group" class="input-group">
 				<p class="text-muted">Please Select State</p>
@@ -25,7 +25,7 @@
 
 		</div>	
 
-		<div class="col-md-3">
+		<div class="col-md-2">
 
 			<div id="oz-signup-input-group" class="input-group">
 				<p class="text-muted">Please Select City</p>
@@ -34,39 +34,53 @@
 
 		</div>
 		
-		<div class="col-md-3">	
+		<div class="col-md-2">	
 
 			<div id="oz-signup-input-group" class="input-group">
 				<p class="text-muted">Please Select Zipcode*</p>
 	 			<input id="zipcode" name="zipcode" class="form-control" type="text" placeholder="zipcode" required ng-model="zipcode" typeahead="zipcode for zipcode in zipcodes | filter:$viewValue | limitTo:6" typeahead-on-select="getAreaForZipcode(zipcode)" />
 			</div>			
 
-		</div>		
+		</div>
+		<div class="col-md-1">
+			<p style="margin:10px auto;"><center>Or</center></p>
+		</div>	
+		<div class="col-md-2">	
+
+			<div id="oz-signup-input-group" class="input-group">
+				<p class="text-muted">Please Select Area*</p>
+	 			<input id="area" name="area" class="form-control" type="text" placeholder="area" required ng-model="locationarea.area" typeahead="locationarea as locationarea.area for locationarea in locationareas | filter:$viewValue | limitTo:6" typeahead-on-select="getAvailabilityForArea(locationarea.area)" />
+			</div>			
+
+		</div>	
+		<div class="col-md-1"></div>	
 	</div>
 
 	<!-- Delivery Charge add view start -->
 	
-	<div ng-show="AreaUnderZipcode.length > 0 && showAreaUnderZipcode" style="margin:0px;" class="row">
+	<div ng-show="add_availability.length > 0 && viewAddAreaAvailability" style="margin:0px;" class="row">
 		<div style="margin:10px auto;" class="col-md-12">
 			<div style="padding:10px; margin:5px auto; " class="col-md-12">
 				<p style="letter-spacing:1px; font-size:13px;" class="text-info"><em>** While adding delivery charges for available areas please enter amount in rupees and those who have selected <strong>charge in percentage</strong> option while creating branches must enter amount in percentage. </em></p>
 			</div>
-			<form class="css-form" name="form.deliveryChargeForm" novalidate>
-				<p><small style="color:red;" ng-show="(deliveryChargeError && form.deliveryChargeForm.submitted)">*Please enter delivery charge in digits only.</small></p>
+			<form class="css-form" name="form.addDeliveryChargeForm" novalidate>
+				<p><small style="color:red;" ng-show="(deliveryChargeError && form.addDeliveryChargeForm.submitted)">*Please enter delivery charge in digits only.</small></p>
 				<table class="table table-striped table-condensed">
 					<thead>
 						<tr style="letter-spacing:1px; font-size:13px; font-weight:bold; text-transform:uppercase;">
-							<td width="10%">Serial #</td>
-							<td width="40%">Area</td>
+							<td width="15%">Serial #</td>
+							<td width="20%">Zipcode</td>
+							<td width="20%">Area</td>
 							<td width="25%">Availability</td>
-							<td width="25%">Delivery Charge(<i class="fa fa-inr"></i> or %)</td>
+							<td width="20%">Delivery Charge(<i class="fa fa-inr"></i>)</td>
 						</tr>
 					</thead>
 					<tbody>
-						<tr style="letter-spacing:1px; font-size:12px; text-transform:uppercase;" ng-repeat="available in delivery_available">
+						<tr style="letter-spacing:1px; font-size:12px; text-transform:uppercase;" ng-repeat="available in add_availability">
 							<td>{{$index + 1}}</td>
+							<td>{{available.coverage.zipcode}}</td>
 							<td>{{available.coverage.area}}</td>
-							<td><input type="checkbox" checklist-model="delivery.available" checklist-value="available.coverage.area"></td>
+							<td><input type="checkbox" ng-model="available.available"></td>
 							<td>
 								<input style="width:80%" name="value" class="form-control" type="text" ng-pattern="/^[0-9]*$/" ng-model="available.value" required/>
 							</td>
@@ -77,7 +91,7 @@
 			<div style="margin:0px;" class="row">
 				<div class="col-md-9"></div>
 				<div style="padding:2px;" class="col-md-3">
-					<button style="width: 90%;background-color:#EC670D;border-color: #E47814;font-weight:bold;border-radius:1px;" class="btn btn-primary" ng-click="addAreaDeliveryAvailability(city, zipcode)"><i class="fa fa-save"></i>&nbsp;&nbsp;Save</button>
+					<button style="width: 90%;background-color:#EC670D;border-color: #E47814;font-weight:bold;border-radius:1px;" class="btn btn-primary" ng-click="addAreaDeliveryAvailability(city, add_availability)"><i class="fa fa-save"></i>&nbsp;&nbsp;Save</button>
 				</div>
 			</div>
 		</div>
@@ -87,22 +101,25 @@
 
 
 	<!-- Delivery Charge display view start -->
-	<div ng-show="deliveryAvailablityArea.length > 0 && showDeliveryAvailaibility" style="margin:0px;" class="row">
+	<div ng-show="delivery_available.length > 0 && viewAreaAvailability" style="margin:0px;" class="row">
 		<div style="margin:10px auto;" class="col-md-12">
 			<table class="table table-striped table-condensed">
 				<thead>
 					<tr style="letter-spacing:1px; font-size:13px; font-weight:bold; text-transform:uppercase;">
-						<td width="10%">Serial #</td>
-						<td width="40%">Area</td>
+						<td width="15%">Serial #</td>
+						<td width="20%">Zipcode</td>
+						<td width="20%">Area</td>
 						<td width="25%">Availability</td>
-						<td width="25%">Delivery Charge(<i class="fa fa-inr"></i> or %)</td>
+						<td width="20%">Delivery Charge(<i class="fa fa-inr"></i>)</td>
 					</tr>
 				</thead>
 				<tbody>
-					<tr style="letter-spacing:1px; font-size:12px; text-transform:uppercase;" ng-repeat="area in deliveryAvailablityArea">
+					<tr style="letter-spacing:1px; font-size:12px; text-transform:uppercase;" ng-repeat="area in delivery_available">
 						<td>{{$index + 1}}</td>
+						<td>{{area.coverage.zipcode}}</td>
 						<td>{{area.coverage.area}}</td>
-						<td><p style="font-size:12px;"><span class="label label-success"><i class="fa fa-check"></i>&nbsp;&nbsp;Available</span></p></td>
+						<td ng-show="area.available"><p style="font-size:12px; color:green;margin-left: 40px;"><i class="fa fa-check"></i></p></td>
+						<td ng-show="!area.available"><p style="font-size:12px; color:#d60027;margin-left: 40px;"><i class="fa fa-times"></i></p></td>
 						<td><p style="font-size:12px;letter-spacing:1px;">{{area.value}}</p></td>
 					</tr>
 				</tbody>				
@@ -110,7 +127,7 @@
 			<div style="margin:0px;" class="row">
 				<div class="col-md-9"></div>
 				<div style="padding:2px;" class="col-md-3">
-					<button style="background-color:#24677C; border-color:#24677C; width:90%;font-weight:bold;border-radius:1px; float:right;" class="  btn btn-sm btn-primary" ng-click="showEditDeliveryAvailablity(zipcode)"><i class="fa fa-edit"></i>&nbsp;&nbsp;Edit</button>
+					<button style="background-color:#24677C; border-color:#24677C; width:90%;font-weight:bold;border-radius:1px; float:right;" class="  btn btn-sm btn-primary" ng-click="showEditDeliveryAvailablity(area.coverage.zipcode)"><i class="fa fa-edit"></i>&nbsp;&nbsp;Edit</button>
 				</div>
 			</div>
 		</div>
@@ -121,33 +138,38 @@
 
 	<!-- Delivery Charge edit view start -->
 
-	<div ng-show="edit_availability.length > 0 && editDeliveryAvailaibility" style="margin:0px;" class="row">
+	<div ng-show="edit_delivery_available.length > 0 && viewEditAreaAvailability" style="margin:0px;" class="row">
 		<div style="margin:10px auto;" class="col-md-12">
-			<table class="table table-striped table-condensed">
-				<thead>
-					<tr style="letter-spacing:1px; font-size:13px; font-weight:bold; text-transform:uppercase;">
-						<td width="10%">Serial #</td>
-						<td width="40%">Area</td>
-						<td width="25%">Availability</td>
-						<td width="25%">Delivery Charge(<i class="fa fa-inr"></i> or %)</td>
-					</tr>
-				</thead>
-				<tbody>
-					<tr style="letter-spacing:1px; font-size:12px; text-transform:uppercase;" ng-repeat="area in edit_availability">
-						<td>{{$index + 1}}</td>
-						<td>{{area.coverage.area}}</td>
-						<td><input type="checkbox" checklist-model="delivery.available" checklist-value="area.coverage.area"></td>
-						<td><input style="width:80%" class="form-control" type="text" ng-pattern="/^[0-9]*$/" ng-model="area.value" /></td>
-					</tr>
-				</tbody>				
-			</table>
+			<form class="css-form" name="form.editDeliveryChargeForm" novalidate>
+				<p><small style="color:red;" ng-show="(deliveryChargeError && form.editDeliveryChargeForm.submitted)">*Please enter delivery charge in digits only.</small></p>
+				<table class="table table-striped table-condensed">
+					<thead>
+						<tr style="letter-spacing:1px; font-size:13px; font-weight:bold; text-transform:uppercase;">
+							<td width="15%">Serial #</td>
+							<td width="20%">Zipcode</td>
+							<td width="20%">Area</td>
+							<td width="25%">Availability</td>
+							<td width="20%">Delivery Charge(<i class="fa fa-inr"></i>)</td>
+						</tr>
+					</thead>
+					<tbody>
+						<tr style="letter-spacing:1px; font-size:12px; text-transform:uppercase;" ng-repeat="area in edit_delivery_available">
+							<td>{{$index + 1}}</td>
+							<td>{{area.coverage.zipcode}}</td>
+							<td>{{area.coverage.area}}</td>
+							<td><input type="checkbox" ng-model="area.available"></td>
+							<td><input style="width:80%" class="form-control" type="text" ng-pattern="/^[0-9]*$/" ng-model="area.value" required/></td>
+						</tr>
+					</tbody>				
+				</table>
+			</form>
 			<div style="margin:0px;" class="row">
 				<div class="col-md-6"></div>
 				<div style="padding:2px;" class="col-md-3">
 					<button style="width: 90%;background-color:transparent;border-color: #b3b3b3; color:black;font-weight:bold;border-radius:1px; float:right;" class="btn btn-primary" ng-click="cancelEditDelivery()"><i class="fa fa-times"></i>&nbsp;&nbsp;Cancel</button>
 				</div>
 				<div style="padding:2px;" class="col-md-3">
-					<button style="width: 90%;background-color:#EC670D;border-color: #E47814;font-weight:bold;border-radius:1px;" class="btn btn-primary" ng-click="editAreaDeliveryAvailability(city, zipcode)"><i class="fa fa-save"></i>&nbsp;&nbsp;Save</button>
+					<button style="width: 90%;background-color:#EC670D;border-color: #E47814;font-weight:bold;border-radius:1px;" class="btn btn-primary" ng-click="editAreaDeliveryAvailability(edit_delivery_available)"><i class="fa fa-save"></i>&nbsp;&nbsp;Save</button>
 				</div>
 			</div>
 		</div>
