--- a/src/app/ProviderWall/ManageProduct/views/oz.providerContent.manageProduct.tpl.html
+++ b/src/app/ProviderWall/ManageProduct/views/oz.providerContent.manageProduct.tpl.html
@@ -123,24 +123,33 @@
 			            <td  style="width:33%" ng-show="selectedBranchId && allCategories.length>0">
 			              		<span class="bold">Level 2 Category  </span>
 			              		<p style="margin-top: 10px;"><em ng-hide="ProductParentCategory">No Level 2 Categories </em></p>
-			              		<select ng-show="ProductParentCategory"  class=" form-control prodo-width50 prodo-validation" ng-model="outer.selectedParentCategory" ng-change="getLevel2Categories(outer.selectedParentCategory.categoryid);" ng-options="category as category.categoryname for category in ProductParentCategory" required  name="selectedParentCategory"></select>
+			              		<select ng-show="ProductParentCategory"  class=" form-control prodo-width50 prodo-validation" ng-model="outer.selectedParentCategory" ng-change="getLevel2Categories(outer.selectedParentCategory.categoryid);" ng-options="category as category.categoryname for category in ProductParentCategory" required  name="selectedParentCategoryadd"></select>
+
+			              		 <div  ng-show="(form.productForm.selectedParentCategoryadd.$dirty  && editMode.editorEnabled==true ) ||(form.productForm.submitted==true && form.productForm.selectedParentCategoryadd.$invalid==true)" class="prodo-product-Invalid">
+								  <span ng-show="form.productForm.selectedParentCategoryadd.$error.required">Please Select Level 2 Category</span>
+								 </div>
 			              </td>
 
 			              <td style="width:33%" ng-show="selectedBranchId && allCategories.length>0">
 			              		<span class="bold">Level 3 Category  </span>
 			              		<p style="margin-top: 10px;"><em ng-hide="ProductCategoryLevel2">No Level 3 Categories </em></p>
-			              		<select  ng-show="ProductCategoryLevel2" class=" form-control prodo-width50 prodo-validation" ng-model="outer.selectedCategory" ng-change="getLevel3Categories(outer.selectedCategory.categoryid);" ng-options="category as category.categoryname for category in ProductCategoryLevel2" required  name="selectedCategory"></select>
+			              		<select  ng-show="ProductCategoryLevel2" class=" form-control prodo-width50 prodo-validation" ng-model="outer.selectedCategory" ng-change="getLevel3Categories(outer.selectedCategory.categoryid);" ng-options="category as category.categoryname for category in ProductCategoryLevel2" required  name="selectedCategoryadd"></select>
+
+			              		 <div  ng-show="(form.productForm.selectedCategoryadd.$dirty  && editMode.editorEnabled==true ) ||(form.productForm.submitted==true && form.productForm.selectedCategoryadd.$invalid==true)" class="prodo-product-Invalid">
+								  <span ng-show="form.productForm.selectedCategoryadd.$error.required">Please Select Level 3 Category</span>
+								 </div>
+
 			              </td>
 
 			               <td style="width:33%" ng-show="selectedBranchId && allCategories.length>0">
 			              		<span class="bold"> Level 4 Category </span>
 
 			              		<p style="margin-top: 10px;"><em ng-hide="ProductCategoryLevel3">No Level 4 Categories </em></p>
-			              		 <select ng-show="ProductCategoryLevel3"  class=" form-control prodo-width50 prodo-validation" ng-change="changeCategory(outer.category)" ng-model="outer.category" ng-options="category as category.categoryname for category in ProductCategoryLevel3" name="subcategory" required ></select>
+			              		 <select ng-show="ProductCategoryLevel3"  class=" form-control prodo-width50 prodo-validation" ng-change="changeCategory(outer.category)" ng-model="outer.category" ng-options="category as category.categoryname for category in ProductCategoryLevel3" name="subcategoryadd" required ></select>
 
 
-                                 <div  ng-show="(form.productForm.subcategory.$dirty  && editMode.editorEnabled==true ) ||(form.productForm.submitted==true && form.productForm.subcategory.$invalid==true)" class="prodo-product-Invalid">
-								  <span ng-show="form.productForm.subcategory.$error.required">Please select sub category</span>
+                                 <div  ng-show="(form.productForm.subcategoryadd.$dirty  && editMode.editorEnabled==true ) ||(form.productForm.submitted==true && form.productForm.subcategoryadd.$invalid==true)" class="prodo-product-Invalid">
+								  <span ng-show="form.productForm.subcategoryadd.$error.required">Please Select Level 4 Category</span>
 								 </div>
 
 
@@ -171,7 +180,7 @@
 
 			              		<p style="margin-top: 10px;"><em ng-hide="ProductCategoryLevel3">No Level 4 Categories </em></p>
 			              		 <select ng-show="ProductCategoryLevel3"  class=" form-control prodo-width50 prodo-validation" ng-change="changeCategory(outer.category)" ng-model="outer.category" ng-options="category as category.categoryname for category in ProductCategoryLevel3" name="subcategory" required ></select>
-
+                                
 
                                  <div  ng-show="(form.productForm.subcategory.$dirty  && editMode.editorEnabled==true ) ||(form.productForm.submitted==true && form.productForm.subcategory.$invalid==true)" class="prodo-product-Invalid">
 								  <span ng-show="form.productForm.subcategory.$error.required">Please select sub category</span>
