--- a/src/app/OrderZapp/oz/views/oz.tpl.html
+++ b/src/app/OrderZapp/oz/views/oz.tpl.html
@@ -3,10 +3,10 @@
     <div style="padding:2px;" class="col-md-1"></div>
     <div style="padding:2px; border: 1px solid #EEE8E8; border-radius: 6px;" class="col-md-10">
       <div style="margin:0px;" class="row">
-        <div class="col-md-3" style = 'background-color : #FFFAFA; min-height : 1000px' >
+        <div class="col-md-3" style = ' min-height : 1000px' >
           <div ui-view="search"></div>
         </div>
-        <div class="col-md-9" style = 'background-color : #FFFAFA;min-height : 1000px'>
+        <div class="col-md-9" style = 'min-height : 1000px'>
           <div ui-view="OrderZappWallView"></div>
         </div>
       </div>
