apk upload logic changed

--- a/src/app/OrderZapp/oz/views/oz.apk.upload.tpl.html
+++ b/src/app/OrderZapp/oz/views/oz.apk.upload.tpl.html
@@ -6,7 +6,7 @@
      		APK FILE
         </div>
         <div class = 'col-md-9' style = 'margin : 10px;'>
-        	<input type = 'file' class = 'form-control' ng-file-select = "onAPKSelect($files)" >
+        	<input type = 'file' class = 'form-control' ng-file-select = "onAPKSelect($files)" id = 'fileTypeApkHost'>
         </div>
     </div>
     <div class = 'row'>
