--- a/src/app/index.html
+++ b/src/app/index.html
@@ -159,6 +159,7 @@
   <script src = "ProviderWall/ManageDeliveryLeadTime/js/ManageDeliveryLeadTimeService.js" ></script>
   <script type="text/javascript" src = 'ProviderWall/ManageProductAvailability/js/OZProductAvailabilityController.js'></script>
   <script type="text/javascript" src = 'OrderZapp/oz/js/OZManageLocation.js'></script>
+  <script  src = 'OrderZapp/oz/js/OZFinancialContentController.js' type="text/javascript"></script>
   <!-- // <script src = 'OrderZapp/oz/js/OZProductConfigurationManagementController.js'></script> -->
 
 	</body>
